# shuttle

./: compose.yml
api/: Cargo.toml
api/migrations/: 0_player.sql  0_users.sql  1_users.sql  2_teams.sql  2_tokens.sql  3_games.sql  4_sets.sql
api/src/: lib.rs  main.rs  session.rs  user.rs
api/src/models/: game.rs  mod.rs  user.rs
api/src/routers/: duo_game.rs  game.rs  mod.rs  solo_game.rs  user.rs
